Reestruturação do Projeto e Cricação de Alerts Dialogs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Maquiagem">
-        <receiver android:name=".WidgetApp">
+        <receiver android:name=".view.WidgetApp">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -24,9 +24,9 @@
         </receiver>
 
         <activity
-            android:name=".LocationActivity"
-            android:parentActivityName=".MainActivity"/>
-        <activity android:name=".MainActivity">
+            android:name=".view.activity.LocationActivity"
+            android:parentActivityName=".view.activity.MainActivity"/>
+        <activity android:name=".view.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
