--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Maquiagem">
-        <activity android:name=".view.activity.SensorActivity"></activity>
+        <activity android:name=".view.activity.SensorActivity"
+            android:parentActivityName=".view.activity.MainActivity"/>
 
         <receiver android:name=".view.WidgetApp">
             <intent-filter>
@@ -31,7 +32,6 @@
         <activity android:name=".view.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
