--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Maquiagem">
-        <activity android:name=".view.activity.ResultActivity"></activity>
+        <activity android:name=".view.activities.ResultActivity"/>
         <activity
-            android:name=".view.activity.SensorActivity"
-            android:parentActivityName=".view.activity.MainActivity" />
+            android:name=".view.activities.SensorActivity"
+            android:parentActivityName=".view.activities.MainActivity" />
 
         <receiver android:name=".view.WidgetApp">
             <intent-filter>
@@ -29,9 +29,9 @@
         </receiver>
 
         <activity
-            android:name=".view.activity.LocationActivity"
-            android:parentActivityName=".view.activity.MainActivity" />
-        <activity android:name=".view.activity.MainActivity">
+            android:name=".view.activities.LocationActivity"
+            android:parentActivityName=".view.activities.MainActivity" />
+        <activity android:name=".view.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
