--- a/Makeup/src/main/AndroidManifest.xml
+++ b/Makeup/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Maquiagem">
+        <activity android:name=".view.activities.SingUpActivity" />
+        <activity android:name=".view.activities.LoginActivity" />
         <activity android:name=".view.activities.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
