--- a/Makeup/src/main/AndroidManifest.xml
+++ b/Makeup/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Maquiagem">
+
         <activity android:name=".view.activities.SingUpActivity" />
         <activity android:name=".view.activities.LoginActivity" />
         <activity android:name=".view.activities.SplashScreen">
@@ -40,6 +41,9 @@
         <activity
             android:name=".view.activities.ConfigurationActivity"
             android:parentActivityName=".view.activities.MainActivity" />
+        <activity
+            android:name=".view.activities.MakeupDetailsActivity"
+            android:parentActivityName=".view.activities.ResultActivity" />
 
         <receiver android:name=".view.WidgetApp">
             <intent-filter>
