--- a/Makeup/src/main/AndroidManifest.xml
+++ b/Makeup/src/main/AndroidManifest.xml
@@ -41,9 +41,7 @@
         <activity
             android:name=".view.activities.ConfigurationActivity"
             android:parentActivityName=".view.activities.MainActivity" />
-        <activity
-            android:name=".view.activities.MakeupDetailsActivity"
-            android:parentActivityName=".view.activities.ResultActivity" />
+        <activity android:name=".view.activities.MakeupDetailsActivity" />
 
         <receiver android:name=".view.WidgetApp">
             <intent-filter>
