--- a/.github/workflows/buildrealease.yml
+++ b/.github/workflows/buildrealease.yml
@@ -27,7 +27,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: build prod
-        run: ./gradlew app:bundleRelease
+        run: ./gradlew Makeup:bundleRelease
         env:
           SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
           SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
@@ -37,4 +37,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: Build Artifacts
-          path: app/build/outputs/
+          path: Makeup/build/outputs/
