--- a/Makeup/src/main/AndroidManifest.xml
+++ b/Makeup/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.maquiagem">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -8,18 +7,19 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.Maquiagem"
-        tools:targetApi="m">
+        android:usesCleartextTraffic="true">
 
         <activity android:name=".view.activities.SingUpActivity" />
         <activity android:name=".view.activities.LoginActivity" />
-        <activity android:name=".view.activities.SplashScreen">
+        <activity
+            android:name=".view.activities.SplashScreen"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -46,7 +46,9 @@
             android:parentActivityName=".view.activities.MainActivity" />
         <activity android:name=".view.activities.MakeupDetailsActivity" />
 
-        <receiver android:name=".view.WidgetApp">
+        <receiver
+            android:name=".view.WidgetApp"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
