--- a/Makeup/src/main/AndroidManifest.xml
+++ b/Makeup/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="false"
@@ -34,9 +35,6 @@
         <activity android:name=".view.activities.ResultActivity" />
         <activity
             android:name=".view.activities.ProfileActivity"
-            android:parentActivityName=".view.activities.MainActivity" />
-        <activity
-            android:name=".view.activities.SensorActivity"
             android:parentActivityName=".view.activities.MainActivity" />
         <activity
             android:name=".view.activities.DataApplicationActivity"
